...

        Column(
            modifier = Modifier
                .width(300.dp)
        ) {
            OutlinedTextField(
                label = { Text("Name") },
                value = name,
                isError = nameError,
                onValueChange = {
                    name = it
                    nameError = false
                },
                modifier = Modifier.fillMaxWidth()
            )
            Spacer(modifier = Modifier.padding(10.dp))
            OutlinedTextField(
                label = { Text("Unit") },
                value = unit,
                isError = unitError,
                onValueChange = {
                    unit = it
                    unitError = false
                },
...
                        nameError = true
                    }
                    if (!unitError && !nameError) {
                        onClick(name, unit, dataType)
                    }
                }) {
                    Text(text = "OK")
                }
            }
        }
    }
}

...
